<resources>
    <string name="app_name">Homework10</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="capital">Capital</string>
    <string name="region">Region</string>
    <string name="population">Population</string>
    <string name="borders">Borders</string>
    <string name="currencies">Currencies</string>
</resources>